# Enterprise-RAG

./: .gitignore  CHANGELOG.md  QA.md  README.md  pyproject.toml
app/: config.py  main.py
app/api/: kb.py  openai_compat.py
app/llm/: ollama_client.py
app/rag/: bm25_index.py  chain.py  embeddings.py  loaders.py  reranker.py  splitter.py  vectorstore.py
app/static/: index.html
docs/: review_ljy_commits.md
docs/superpowers/specs/: 2026-04-27-hybrid-retriever-design.md
scripts/: docker-compose.yml  eval_ragas.py  generate_testset.py  setup.sh  start_tunnel.bat  start_tunnel.sh
tests/: test_bm25_index.py  test_splitter.py
