[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise knowledge-base RAG system with Open WebUI + LangChain + Qdrant + remote Ollama"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",

    # LangChain
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-qdrant>=0.2",
    "langchain-huggingface>=0.1",

    # Vector database
    "qdrant-client>=1.12",

    # Embeddings
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.3",

    # Document parsing
    "pymupdf>=1.24",
    "python-docx>=1.1",

    # HTTP / utils
    "httpx>=0.27",
    "loguru>=0.7",

    # RAG evaluation (阶段3)
    "ragas>=0.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.6",
]
